# ESP32-C6-GEEK

./: README.md
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/01_OneButton/: 01_OneButton.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/02_ADC_Read/: 02_ADC_Read.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/05_LCD_Button/: 05_LCD_Button.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/06_LCD_Time/: 06_LCD_Time.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/07_SD_Test/: 07_SD_Test.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/08_SD_LCD/: 08_SD_LCD.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/09_BLE_LCD/: 09_BLE_LCD.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/10_BLE_UART/: 10_BLE_UART.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/13_WIFI_TCP_Client/: 13_WIFI_TCP_Client.ino
example/ESP32-C6-GEEK-Demo/Arduino-2.0.7/examples/14_WIFI_TCP_Server/: 14_WIFI_TCP_Server.ino
example/ESP32-C6-GEEK-Demo/ESP-IDF-5.5.1/01_SD_Card/: sdkconfig  sdkconfig.defaults  sdkconfig.old
example/ESP32-C6-GEEK-Demo/ESP-IDF-5.5.1/05_lvgl_example_v8/: sdkconfig
example/ESP32-C6-GEEK-Demo/ESP-IDF-5.5.1/06_lvgl_example_v9/: sdkconfig  sdkconfig.old
example/ESP32-C6-GEEK_V2-Demo/ESP-IDF-5.5.1/04_Button/: sdkconfig
example/ESP32-C6-GEEK_V2-Demo/ESP-IDF-5.5.1/04_Button/main/: CMakeLists.txt  idf_component.yml  main.c
example/ESP32-C6-GEEK_V2-Demo/ESP-IDF-5.5.1/04_Button/main/LCD_Driver/: lcd_st7789.h
example/ESP32-C6-GEEK_V2-Demo/ESP-IDF-5.5.1/05_lvgl_example/: sdkconfig  sdkconfig.old
(+43 files in other folders)
